--- a/src/scss/proect2.scss
+++ b/src/scss/proect2.scss
@@ -104,14 +104,18 @@ body {
 	
 }
 
-.line__expand{
+.line__expand,
+.remonts-line__expand
+{
 	height:24px;
 	width: 24px;
 	margin-top: auto ;
 	margin-bottom: auto;
 	
 }
-.line_text{
+.line_text,
+.remonts-line_text
+{
 	height:16px;
 	font-size: 16px;
 	font-weight:normal;
@@ -121,9 +125,13 @@ body {
 }
 
 .line_input,
-.slaid{
+.slaid,
+.remonts-line_input
+{
 	display: none;
 }
+
+
 
 /*screen*/
 
@@ -134,6 +142,7 @@ body {
 		display: block;	
 	}
 .cats, 
+.remonts,
 .footerMenu{
 	display: none;
 }
