--- a/src/scss/proect.scss
+++ b/src/scss/proect.scss
@@ -19,7 +19,12 @@
 body {
 	font-family: 'TTLakes', sans-serif;
 }
-
+.block1{
+	border: 1px solid #097e5f;
+	width: 94%;
+	margin-left: 24px;
+	margin-right: 24px;
+}
 ul,
 li {
 	margin: 0;
