--- a/src/scss/proect2.scss
+++ b/src/scss/proect2.scss
@@ -21,9 +21,11 @@ body {
 	border: 0px dotted rgb(98, 0, 255);
 }
 .block2{
-	width: 100%;
+	width: 94%;
 	border: 2px solid rgb(141, 214, 45);
 	background-color:  rgba(248, 248, 248, 1);
+	margin-left: 24px;
+	margin-right: 24px;
 }
 .upperHed{
 	display: flex;
