--- a/src/scss/proect3.scss
+++ b/src/scss/proect3.scss
@@ -21,14 +21,18 @@ body {
 	border: 0px dotted rgb(98, 0, 255);
 }
 .block3{
-	width: 100%;
+	width: 94%;
 	border: 2px solid rgb(62, 45, 214);
 	background-color:  rgba(248, 248, 248, 1);
+	margin-left: 24px;
+	margin-right: 24px;
+	
 }
 table {
     border-collapse: collapse;
     height:100%;
 	width: 100%;	
+	
     
 }
 tr,td,th,.rect td{
@@ -147,7 +151,66 @@ td {
 	height:32px;	
 }
 	
+.block3-text>p{
+	
+	color:#1B1C21;
+	font-size: 14px;
+	line-height:20px;
+}
+.block3-text{
+	height:60px;
+	width: 421px;
 
+}
+.block3-src{
+	margin-top: 16px;
+	display:flex;
+	height:24px;
+	width: 326px;
+
+	
+	justify-content:space-between;
+	text-align: center;
+}
+.block3-src>div{
+	font-size: 16px;
+	line-height:24px;
+	color:#1B1C21;
+	font-weight:500;
+}
+
+.footer{
+	display:flex;
+	justify-content:space-between;
+	height:81px;
+	width: 100%;
+	border: 1px solid #e60303;
+	margin-top: 16px;
+	font-size: 14px;
+	color:#7E7E82;
+	line-height: 16px;
+}
+
+.footer :nth-child(1){
+	border: 1px solid #0a0896;
+	width: 218px;
+	margin-left: 24px;
+	margin-top: 32px;
+}
+.footer :nth-child(2){
+	border: 1px solid #58c90c;
+	width: 214px;
+	margin-left: auto;
+	margin-right:auto;
+	margin-top: 32px;
+}
+.footer :nth-child(3){
+	border: 1px solid #bbec0a;
+	width: 213px;
+	margin-right: 24px;
+	margin-top: 32px;
+
+}
 
 
  /*  
