--- a/src/scss/mobilMenu.scss
+++ b/src/scss/mobilMenu.scss
@@ -1,33 +1,34 @@
-@font-face {
+  /*@font-face {
 	font-family: 'TTLakes';
 	font-style: normal;
 	font-weight: normal;
 	src: local('TTLakes'),
-		url(fond/TTLakes-Regular.woff) format('woff');
+		url(../fonts/TTLakes-Regular.woff) format('woff');
 
 }
 
-/* Жирный */
+Жирный 
 @font-face {
 	font-family: 'TTLakes';
 	font-style: normal;
 	font-weight: bold;
 	src: local('TTLakes'),
-		url(fond/TTLakes-Bold.woff) format('woff');
+		url(../fonts/TTLakes-Bold.woff) format('woff');
 }
 
-body {
+   body {
 	font-family: 'TTLakes', sans-serif;
 	border: 0px dotted rgb(98, 0, 255);
-}
+}*/
 .backMenu{
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	width: 320px;
-	height:676px;
+	height:676;
 	border: 0px solid red;
-
+    position: absolute;
+	
 }
 
 /*heder*/
@@ -35,48 +36,46 @@ body {
 	display: flex;
 	width: 320px;
 	justify-content: flex-start;
-	align-self: center;
+	align-items: center;
 	background-color: white;
 	padding:0px;
 	margin-top:18px;
 	border: 0px solid rgb(141, 214, 45);
 }
-.line__burger{
+.upperMenu__burger{
 margin-left:16px
 }
-.line__group{
+.upperMenu__group{
 	margin-left:16px
 }
-.line__search{
+.upperMenu__search{
 	margin-right: 16px;
 	margin-left:auto;
 }
-.line {
-	align-self: center;	
-}
+
 
 
 /*main */
-.main-nav{
+.backMenu__main-nav{
 	border: 0px solid rgb(84, 116, 87);
 }
 
-ul.nav-list,
-li.nav-list, a{
+ul.backMenu__nav-list,
+li.backMenu__nav-list, a{
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
 	text-decoration-style: none;
 }
-ul.nav-list{
+ul.backMenu__nav-list{
 	border: 0px solid rgb(84, 116, 87);
 	margin-top: 22px;
 }
 
-li.nav-list:not(:last-child){
+li.backMenu__nav-list:not(:last-child){
 	margin-bottom:8px;	
 }
-li.nav-list a{
+li.backMenu__nav-list a{
 	display: block;
 	font-weight: normal;
 	font-size: 16px;
@@ -88,7 +87,7 @@ li.nav-list a{
 	border: 0px solid rgb(223, 219, 16);
 	text-align:center;
 }
-li.nav-list {
+li.backMenu__nav-list {
 	display: flex;
 	height:32px;
 	border: 0px solid rgb(78, 16, 223);
@@ -96,27 +95,26 @@ li.nav-list {
 
 
 /*footer*/
-.footerMenu
+.endMenu
  {
 	display: flex;
 	width: 196px;
 	flex-wrap:wrap;
-	border: px solid rgb(211, 17, 153);
 	margin-left:16px;
 	margin-top: 32px;
  }
- .line__chat,
-.line__profile{
+ .endMenu__chat,
+.endMenu__profile{
 margin-left:16px;
 }
-.line__email{
+.endMenu__email{
 	height:24px;
 	font-size: 16px;
 	margin-top: 16px;
 }
-.line__tel{
+.endMenu__tel{
 	height:36px;
-	font-size: 24px;
+	font-size: 22px;
 	font-weight: bold;
 	margin-top: 12px;
 }
@@ -151,7 +149,7 @@ transition:transform 0.5s,
           filter 0.5s;
 }
 
-.nav-list:before{
+.backMenu__nav-list:before{
 	display: none;
 	content: "";
 	height:32px;
@@ -160,10 +158,10 @@ transition:transform 0.5s,
 	border-right: 4px solid  rgba(65, 246, 215, 1);
 	border-radius: 15px;
 }
-.nav-list:hover.nav-list:before{
+.backMenu__nav-list:hover.backMenu__nav-list:before{
 	display: block;
 }
-.nav-list:hover a{
+.backMenu__nav-list:hover a{
 	color: grey;
 	margin-left: 12px;
 } 
@@ -186,7 +184,22 @@ transition:transform 0.5s,
 	box-shadow: 16px 0px 52px 0px rgba(14, 24, 80, 0.2);
 	height:1024px;
 		}
-	.footerMenu {
+	.endMenu {
 		margin-top:370px;
 	}
 	}
+	@media screen and (max-width: 1120px)  {
+		body .backMenu
+		 {
+			display: none;
+		}
+
+		
+}
+@media screen and (min-width: 1119px)  {
+
+	.backMenu{
+		box-shadow: 0px 0px 0px 0px #fff;
+
+}
+}
