--- a/src/scss/block3.scss
+++ b/src/scss/block3.scss
@@ -182,16 +182,25 @@ td {
 .footer{
 	display:flex;
 	justify-content:space-between;
+	flex-direction: row;
 	height:81px;
 	width: 100%;
 	border: 1px solid #e60303;
 	margin-top: 16px;
+	align-items: flex-start;
+	
+}
+.footer__item {
+	border: 1px solid #0a0896;
+	width: 220px;
+	margin-top: 16px;
+	line-height: 16px;
 	font-size: 14px;
 	color:#7E7E82;
-	line-height: 16px;
 }
 
-.footer :nth-child(1){
+
+/*.footer :nth-child(1){
 	border: 1px solid #0a0896;
 	width: 218px;
 	margin-left: 24px;
@@ -210,106 +219,12 @@ td {
 	margin-right: 24px;
 	margin-top: 32px;
 
-}
+}*/
 
 
- /*  
-  
-}
-.cats,
-.remonts
-{
-	display: flex;
-	flex-wrap:wrap;
-	justify-content: space-between;
-	border: 0px solid rgb(106, 32, 224);
-}
-.cat,
-.remont
- {
-	display:flex;
-	height:72px;
-	width: 224px;	
-	margin:24px 16px;
-	justify-content:space-between;
-	border: 0px solid rgb(32, 224, 48);
-	background-color:  rgba(255, 255, 255, 1);
-}
-.remont{
-	height:160px;
-}
-
- 
-
-.bitmap{
-	border: 0px solid rgb(106, 32, 224);
-	margin-left: 16px;
-	margin-top: auto ;
-	margin-bottom: auto;	
-}
-.remont .bitmap{
-	margin-left: 16px;
-	margin-top: 16px ;
-	margin-bottom: auto;
-
-}
-
-.line__go{
-	height:40px;
-	width: 40px;
-     margin-right: 16px;
-	margin-top: auto ;
-	margin-bottom: auto;	
-}
-.remont .line__go{
-	margin-right: auto;
-	margin-top: auto ;
-	margin-bottom: 16px;
-
-}
-.footerMenu{
-	display:flex;
-	height:24px;
-	width: 134px;	
-	margin-left: 16px;
-	margin-bottom: 34px;
-	justify-content:space-between;
-	
-}
-
-.line__expand,
-.remonts-line__expand
-{
-	height:24px;
-	width: 24px;
-	margin-top: auto ;
-	margin-bottom: auto;
-	
-}
-.line_text,
-.remonts-line_text
-{
-	height:16px;
-	font-size: 16px;
-	font-weight:normal;
-	margin-top: auto ;
-	margin-bottom: auto;
-	margin-left: 9px;
-}
-
-.line_input,
-.slaid,
-.remonts-line_input
-{
-	display: none;
-}
-
-*/
-
-/*screen*/
 
 
-@media screen and (max-width: 540px)  {
+@media screen and (max-width: 360px)  {
 
 .slaid	{
 		display: block;	
@@ -321,4 +236,12 @@ td {
 .block3{
 	width: 320px;
 }
+.footer{
+
+	flex-direction: column;
+
 }
+
+}
+
+
