--- a/src/scss/block3.scss
+++ b/src/scss/block3.scss
@@ -1,28 +1,12 @@
-@font-face {
-	font-family: 'TTLakes';
-	font-style: normal;
-	font-weight: normal;
-	src: local('TTLakes'),
-		url(../fonts/TTLakes-Regular.woff) format('woff');
-
-}
-
-/* Жирный */
-@font-face {
-	font-family: 'TTLakes';
-	font-style: normal;
-	font-weight: bold;
-	src: local('TTLakes'),
-		url(../fonts/TTLakes-Bold.woff) format('woff');
-}
 
 body {
 	font-family: 'TTLakes', sans-serif;
 	border: 0px dotted rgb(98, 0, 255);
 }
-.block3{
+.block3,
+.footer{
 	width: 94%;
-	border: 2px solid rgb(62, 45, 214);
+
 	background-color:  rgba(248, 248, 248, 1);
 	margin-left: 24px;
 	margin-right: 24px;
@@ -183,43 +167,17 @@ td {
 	display:flex;
 	justify-content:space-between;
 	flex-direction: row;
-	height:81px;
-	width: 100%;
-	border: 1px solid #e60303;
-	margin-top: 16px;
+	margin-top: 47px;
 	align-items: flex-start;
 	
 }
 .footer__item {
-	border: 1px solid #0a0896;
 	width: 220px;
-	margin-top: 16px;
+	margin-top: 32px;
 	line-height: 16px;
 	font-size: 14px;
 	color:#7E7E82;
 }
-
-
-/*.footer :nth-child(1){
-	border: 1px solid #0a0896;
-	width: 218px;
-	margin-left: 24px;
-	margin-top: 32px;
-}
-.footer :nth-child(2){
-	border: 1px solid #58c90c;
-	width: 214px;
-	margin-left: auto;
-	margin-right:auto;
-	margin-top: 32px;
-}
-.footer :nth-child(3){
-	border: 1px solid #bbec0a;
-	width: 213px;
-	margin-right: 24px;
-	margin-top: 32px;
-
-}*/
 
 
 
@@ -239,7 +197,12 @@ td {
 .footer{
 
 	flex-direction: column;
-
+	text-align: center;
+}
+.footer__item{
+margin-top: 16px;
+margin-left: auto;
+margin-right: auto;
 }
 
 }
