--- a/src/scss/proect.scss
+++ b/src/scss/proect.scss
@@ -223,9 +223,22 @@ section {
 	height: 100%;
 }
 
-
-
-
+.madal-feedBack {
+	display: none;
+	width: 440px;
+	padding:20px;
+	
+}
+form input{
+	width: 376px;
+	height: 48;
+	margin-bottom: 16px;
+}
+form textarea{
+	width: 376px;
+	height: 118;
+	margin-bottom: 16px;
+}
 
 
 
@@ -240,6 +253,28 @@ section {
 	   position: absolute;
 	   left:330px;
    }
+
+   .madal-feedBack.activ 
+   {
+	display: block;
+	position: absolute;
+	left:900px;
+	border: 3px solid red;
+
+   }
+   main.activ
+   {
+	  position: absolute;
+	  left:0px;
+	  width: 900px;
+	  opacity: 0.01;
+  }
+ .back_menu.activ {
+	display: none;
+
+}
+
+
 
 }
 
@@ -276,7 +311,7 @@ section {
 		display: none;
 	}
 
-	section {
+	section .back_menu {
 		display: block;
 
 	}
