--- a/src/scss/mobilMenu.scss
+++ b/src/scss/mobilMenu.scss
@@ -5,7 +5,6 @@ $background-heder: white;
 	flex-direction: column;
 	justify-content: flex-start;
 	width: 320px;
-	height:676;
     position: absolute;
 	
 }
@@ -190,6 +189,9 @@ transition:transform 0.5s,
 			position: absolute;
 		   left:330px;
 		   opacity: 0.01;
+		   height: 1000px;
+		   Overflow: hidden;
+		  
 	   }
 
 
