--- a/src/scss/block3.scss
+++ b/src/scss/block3.scss
@@ -102,6 +102,7 @@ td {
     
     border: 1px solid #EAEAEA;
 }
+
 .tabl{
 	display: block;
 	height:216px;
@@ -183,11 +184,15 @@ td {
 
 @media screen and (max-width: 768px)  {
 
-.slaid	{
+.slaid-cats,
+.slaid-remonts,
+.slaid-tab	
+       {
 		display: block;	
+		border: 2px solid rgb(32, 10, 226);	
 	}
    
-   table{
+table{
 	display: none;
 }
 .block3{
