--- a/src/scss/block3.scss
+++ b/src/scss/block3.scss
@@ -9,7 +9,7 @@ body {
 }
 .block3,
 .footer{
-	width: 94%;
+	width: 100%;
 
 	background-color:  rgba(248, 248, 248, 1);
 	margin-left: 24px;
@@ -106,10 +106,11 @@ td {
 .tabl{
 	display: block;
 	height:216px;
-	width: 260px;
+	max-width: 260px;
 	background-color:  rgba(255, 255, 255, 1);
 	text-align: start;
 	border-radius: 20px;
+	border:2px solid green;
 
 }
 .tabl-uslugi,
@@ -195,9 +196,9 @@ td {
 table{
 	display: none;
 }
-.block3{
+/*.block3{
 	width: 320px;
-}
+}*/
 .footer{
 
 	flex-direction: column;
