--- a/src/scss/mobilMenu.scss
+++ b/src/scss/mobilMenu.scss
@@ -153,7 +153,7 @@ transition:transform 0.5s,
 @media screen and (min-width: 768px)  {
 	.backMenu{
 	box-shadow: 16px 0px 52px 0px rgba(14, 24, 80, 0.2);
-	height:1024px;
+	height: 1024px;
 		}
 	.endMenu {
 		margin-top:370px;
@@ -171,6 +171,7 @@ transition:transform 0.5s,
 
 	.backMenu{
 		box-shadow: 0px 0px 0px 0px #fff;
+		height: auto;
 
 }
 }
@@ -178,6 +179,7 @@ transition:transform 0.5s,
 	body .backMenu.onBurger {
 		display: flex;
 		margin-top: -15px;
+		
 		}
 	
 		main.disable
@@ -185,7 +187,7 @@ transition:transform 0.5s,
 			position: absolute;
 		   left:330px;
 		   opacity: 0.01;
-		   height: 1000px;
+		  height: 400px;
 		   Overflow: hidden;
 		  
 	   }
