--- a/src/scss/block2.scss
+++ b/src/scss/block2.scss
@@ -31,7 +31,7 @@ body {
 	display: flex;
 	flex-wrap:wrap;
 	justify-content: space-between;
-	overflow: hidden;
+	//overflow: visible;
 }
 .cat,
 .remont
@@ -140,7 +140,7 @@ body {
 }
 
 
-@media screen and (max-width: 1024px)  {
+@media screen and (max-width: 769px)  {
 	
 	.cats,
     .remonts
