--- a/src/scss/mobilMenu.scss
+++ b/src/scss/mobilMenu.scss
@@ -6,7 +6,7 @@ $background-heder: white;
 	justify-content: flex-start;
 	width: 320px;
     position: absolute;
-	border: 2px solid red;
+	
 	
 }
 
@@ -180,19 +180,25 @@ transition:transform 0.5s,
 	body .backMenu.onBurger {
 		display: flex;
 		margin-top: -15px;
-		
-		}
+		height: 2000px;
 	
+		}
+		
 		main.disable
 		{
 			position: absolute;
 		   left:330px;
-		   opacity: 0.01;
-		  height: 400px;
-		   Overflow: hidden;
-		  
+		   opacity: 0.51;
+		  height: 800px;
+		  Overflow: hidden;
+		 
 	   }
-
+	   .line{
+		display:flex;
+	   }
+	   .line.disable {
+		display: none;
+	   }
 
 	}
 	@media screen and (max-width: 768px) {
