--- a/src/scss/modals.scss
+++ b/src/scss/modals.scss
@@ -43,7 +43,6 @@ $key-call:#FF3E79;
 	display: none;
 	width: 440px;
 	padding:20px;
-	
 }
 
 .madal-feedBack__close,
@@ -63,7 +62,7 @@ form textarea{
 	width: 376px;
 	height: 48px;
 	margin-bottom: 16px;
-	border: 1px solid  $grey-ligt;     // $text-grey
+	border: 1px solid  $grey-ligt;     
 	border-radius: 10px;
 	color: $text-grey;
 	font-family: 'TTLakes', sans-serif;
@@ -95,7 +94,9 @@ float: right;
 margin-top: 60px;
 }
 
-@media screen and (min-width:768px) {
+
+
+@media screen and (min-width:320px) {
 	.madal-feedBack,
 	.madal-call
 	{
@@ -103,9 +104,7 @@ margin-top: 60px;
 		width: 440px;
 		padding:20px;
 	}
-
-
-
+	.madal-call.activ,
    .madal-feedBack.activ 
    {
 	display: block;
@@ -125,12 +124,12 @@ margin-top: 60px;
 
 }
 
-.madal-call.activ 
+/*.madal-call.activ 
    {
 	display: block;
 	position: absolute;
 	left:300px;
-   }
+   }*/
 
 }
 
@@ -158,15 +157,15 @@ margin-top: 60px;
 	left:900px;
    }
 
-
 }
 @media screen and (max-width:768px) {
-	.madal-feedBack,
-	.madal-call
+	.madal-feedBack.activ 
 	{
-		display: none;
-		width: 320px;
-		padding:20px;
+	 display: block;
+	 position: absolute;
+	 width: auto;
+	 left:auto;
+	 right: auto;
 	}
 	.madal-feedBack__close,
     .madal-call__close
@@ -176,7 +175,6 @@ margin-top: 60px;
 
 }
 
-	
 	main.activ
 	{
 	   position: absolute;
@@ -196,5 +194,4 @@ margin-top: 60px;
 	 left:0px;
 	}
 	
- 
  }
