--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
   margin: 0; }
 
 .block1 {
-  width: 96%;
+  width: 100%;
   margin: 0 auto 0 20px; }
 
 ul,
@@ -243,8 +243,7 @@ section.text {
   flex-direction: column;
   justify-content: flex-start;
   width: 320px;
-  position: absolute;
-  border: 2px solid red; }
+  position: absolute; }
 
 /*heder*/
 .upperMenu {
@@ -386,13 +385,18 @@ a img {
 @media screen and (min-width: 768px) and (max-width: 1120px) {
   body .backMenu.onBurger {
     display: flex;
-    margin-top: -15px; }
+    margin-top: -15px;
+    height: 2000px; }
   main.disable {
     position: absolute;
     left: 330px;
-    opacity: 0.01;
-    height: 400px;
-    Overflow: hidden; } }
+    opacity: 0.51;
+    height: 800px;
+    Overflow: hidden; }
+  .line {
+    display: flex; }
+  .line.disable {
+    display: none; } }
 
 @media screen and (max-width: 768px) {
   .backMenu {
@@ -517,15 +521,18 @@ body {
     flex-wrap: nowrap; } }
 
 body {
-  font-family: 'TTLakes', sans-serif;
-  border: 0px dotted #6200ff; }
+  font-family: 'TTLakes', sans-serif; }
 
 .block3,
 .footer {
   width: 100%;
   background-color: #f8f8f8;
-  margin-left: 24px;
-  margin-right: 24px; }
+  margin-left: 20px;
+  margin-right: 20px; }
+
+.footer {
+  margin-left: 0px;
+  margin-right: 0px; }
 
 table {
   border-collapse: collapse;
@@ -610,8 +617,7 @@ td {
   max-width: 260px;
   background-color: white;
   text-align: start;
-  border-radius: 20px;
-  border: 2px solid green; }
+  border-radius: 20px; }
 
 .tabl-uslugi,
 .tabl-cena,
@@ -627,17 +633,14 @@ td {
   justify-content: space-between;
   padding-bottom: 16px; }
 
-.swip-pad {
-  height: 32px; }
-
 .block3-text > p {
   color: #1B1C21;
   font-size: 14px;
   line-height: 20px; }
 
 .block3-text {
-  height: 60px;
-  width: 421px; }
+  height: 80px;
+  max-width: 421px; }
 
 .block3-src {
   margin-top: 16px;
@@ -674,16 +677,16 @@ td {
     display: block; }
   table {
     display: none; }
-  /*.block3{
-	width: 320px;
-}*/
   .footer {
     flex-direction: column;
     text-align: center; }
   .footer__item {
     margin-top: 16px;
     margin-left: auto;
-    margin-right: auto; } }
+    margin-right: auto; }
+  .block3-text {
+    height: auto;
+    max-width: auto; } }
 
 @charset "UTF-8";
 @font-face {
@@ -751,12 +754,13 @@ form textarea {
   float: right;
   margin-top: 60px; }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 320px) {
   .madal-feedBack,
   .madal-call {
     display: none;
     width: 440px;
     padding: 20px; }
+  .madal-call.activ,
   .madal-feedBack.activ {
     display: block;
     position: absolute;
@@ -769,10 +773,12 @@ form textarea {
     opacity: 0.01; }
   .back_menu.activ {
     display: none; }
-  .madal-call.activ {
-    display: block;
-    position: absolute;
-    left: 300px; } }
+  /*.madal-call.activ 
+   {
+	display: block;
+	position: absolute;
+	left:300px;
+   }*/ }
 
 @media screen and (min-width: 1121px) {
   main {
@@ -786,11 +792,12 @@ form textarea {
     left: 900px; } }
 
 @media screen and (max-width: 768px) {
-  .madal-feedBack,
-  .madal-call {
-    display: none;
-    width: 320px;
-    padding: 20px; }
+  .madal-feedBack.activ {
+    display: block;
+    position: absolute;
+    width: auto;
+    left: auto;
+    right: auto; }
   .madal-feedBack__close,
   .madal-call__close {
     position: static;
